@@ -10,8 +10,9 @@ class Selection(Field):
     '''
     _type = 'selection'
 
-    def __init__(self, selection, string='', sort=True, translate=True,
-            help='', required=False, readonly=False, domain=None, states=None,
+    def __init__(self, selection, string='', sort=True,
+            selection_change_with=None, translate=True, help='',
+            required=False, readonly=False, domain=None, states=None,
             select=False, on_change=None, on_change_with=None, depends=None,
             order_field=None, context=None, loading='eager'):
         '''
@@ -20,7 +21,7 @@ class Selection(Field):
             to store and the second is the value to display.
         :param sort: A boolean to sort or not the selections.
         '''
-        super(Selection, self).__init__(string=string,  help=help,
+        super(Selection, self).__init__(string=string, help=help,
             required=required, readonly=readonly, domain=domain, states=states,
             select=select, on_change=on_change, on_change_with=on_change_with,
             depends=depends, order_field=order_field, context=context,
@@ -29,6 +30,7 @@ class Selection(Field):
             self.selection = selection.copy()
         else:
             self.selection = selection
+        self.selection_change_with = selection_change_with
         self.sort = sort
         self.translate_selection = translate
     __init__.__doc__ += Field.__init__.__doc__
